fixed the inspect link being too close and a bug where the facebox would not be reactivated

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -27,9 +27,12 @@
 /*  float: right;*/
 }
 
+#items li.focus div.actions a {
+  padding-right: 10px;
+}
+
 #items li.focus a.accept {
   color: #36993B;
-  padding-right: 10px;
 }
 #items li.focus a.reject {
   color: #B81104;
